--- a/firstPage/index.html
+++ b/firstPage/index.html
@@ -25,7 +25,7 @@
                 5,000 tutors ready to guide you.</p>
         </div>
         <div class="card">
-            <img src="/img/coding-a-website-3.svg" img width="95.56" height="95.56">
+            <img src="/img/coding-a-website-3.svg" width="97.95" height="97.95">
             <h3>Sign up as a Tutor</h3>
             <p class="text">Join our talent pool of over 10,000 students
                 learning and growing their skills, with over
