--- a/firstPage/index.html
+++ b/firstPage/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <button type="submit">
+        <a class="login-link" href="/secondPage/index.html">
         <p class="login">Log in to account</p>
+        </a>
     </button>
     <h1>Welcome to our Educational Website</h1>
     <p class="select">Select how you want to proceed with the platform.
