--- a/secondPage/index.html
+++ b/secondPage/index.html
@@ -6,10 +6,59 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="secondPage\css\style.css">
+    <link rel="stylesheet" href="/secondPage/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="full-body">
+        <div class="inform">
+            <a href="#">Sign up as a Student <span>1</span></a>
+            <h1>Welcome to our Educational Website</h1>
+            <p>By signing up, you will gain access to a wealth
+                of resources, including engaging video lectures,
+                interactive quizzes, and personalised feedback 
+                from expert instructors.</p>
+            <img src="/img/Smart.png" width="174.98" height="181.52">
+        </div>
+        <div class="forms">
+            <form>
+                <h2>Create an Account</h2>
+                <div></div>
+                <div></div>
+                <div class="registration">
+                    <input type="text" autocomplete="name" placeholder="Full Name"><br>
+                    <input type="email" name="email" placeholder="Your Email Address"><br>
+                    <label for="phone">Phone Number</label><br>
+                    <select id="num" placeholder="+7">
+                        <option><img src="/img/ng1.png" width="16.72" height="11.47">
+                            
+                        </option>
+                    </select>
+                    <input type="text" name="phone"><br>
+                    <label for="password">Password</label><br>
+                    <input type="password" name="password"><br>
+                    <input type="checkbox" id="accept" name="accept" value="accept">
+                    <label for="accept">I hereby accept the T&C of Liquid</label><br>
+                    <button type="submit">Sign Up</button>
+                    <p>Or with</p>
+                    <div class="two-sos">
+                        <button type="submit">
+                            <a href="#">
+                                <img src="/img/Facebook.svg" width="9.56" height="9.56">
+                                <p class="login">Facebook</p>
+                            </a>
+                        </button>
+                        <button type="submit">
+                            <a href="#">
+                                <img src="/img/Google.png" width="9.56" height="9.56">
+                                <p class="login">Google</p>
+                            </a>
+                        </button>
+                    </div>
+                    <p>Already have an accountt? <a href="#">Log In</a></p>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
