--- a/firstPage/index.html
+++ b/firstPage/index.html
@@ -10,28 +10,30 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="submit">
-        <a class="login-link" href="/secondPage/index.html">
-        <p class="login">Log in to account</p>
-        </a>
-    </button>
-    <h1>Welcome to our Educational Website</h1>
-    <p class="select">Select how you want to proceed with the platform.
-        Choose between Tutor and Student.</p>
-    <div class="cards">
-        <div class="card">
-            <img src="/img/student-studying.svg" width="95.56" height="95.56">
-            <h3>Sign up as a Student</h3>
-            <p class="text">Join our talent pool of over 10,000 students
-                learning and growing their skills, with over
-                5,000 tutors ready to guide you.</p>
-        </div>
-        <div class="card">
-            <img src="/img/coding-a-website-3.svg" width="97.95" height="97.95">
-            <h3>Sign up as a Tutor</h3>
-            <p class="text">Join our talent pool of over 10,000 students
-                learning and growing their skills, with over
-                5,000 tutors ready to guide you.</p>
+    <div class="full-body">
+        <button type="submit">
+            <a class="login-link" href="/secondPage/index.html">
+            <p class="login">Log in to account</p>
+            </a>
+        </button>
+        <h1>Welcome to our Educational Website</h1>
+        <p class="select">Select how you want to proceed with the platform.
+            Choose between Tutor and Student.</p>
+        <div class="cards">
+            <div class="card">
+                <img src="/img/student-studying.svg" width="95.56" height="95.56">
+                <h3>Sign up as a Student</h3>
+                <p class="text">Join our talent pool of over 10,000 students
+                    learning and growing their skills, with over
+                    5,000 tutors ready to guide you.</p>
+            </div>
+            <div class="card">
+                <img src="/img/coding-a-website-3.svg" width="97.95" height="97.95">
+                <h3>Sign up as a Tutor</h3>
+                <p class="text">Join our talent pool of over 10,000 students
+                    learning and growing their skills, with over
+                    5,000 tutors ready to guide you.</p>
+            </div>
         </div>
     </div>
 </body>
